--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,2 +1,3 @@
 unit.route246js-polyce.name = [red]Pol[blue]yce[]
 unit.route246js-unit246.name = [red]route[]
+unit.route246js-maidpoly.name = [gray]M[]a[gray]i[]d [gray]P[]o[gray]l[]y
